Fix bad z-index bis

--- a/website/public/assets/css/main.css
+++ b/website/public/assets/css/main.css
@@ -1444,7 +1444,6 @@ textarea {
    Banner
    ****************************************************** */
 .banner {
-  background-color: #fff;
   background-image: url("../images/bgcitysmall.svg");
   background-size: contain;
   background-position: center bottom;
@@ -1829,7 +1828,9 @@ header {
   height: 200px; }
   header .logo {
     width: 50px;
-    float: left; }
+    float: left;
+    position: relative;
+    z-index: 100; }
     @media (min-width: 48em) {
       header .logo {
         width: 60px; } }
@@ -1862,7 +1863,7 @@ header {
 main {
   position: relative;
   top: -90px;
-  z-index: -1; }
+  z-index: 0; }
   @media (min-width: 71.25em) {
     main {
       top: -130px; } }
