--- a/website/public/assets/scss/components/_sections.scss
+++ b/website/public/assets/scss/components/_sections.scss
@@ -16,7 +16,6 @@
    Banner
    ****************************************************** */
 .banner {
-    background-color:$color-invert;
     background-image:url('../images/bgcitysmall.svg');
     background-size:contain;
     background-position:center bottom;
